set title optional on front page , css fix for social logos and menu alignement

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -796,6 +796,13 @@ position: inherit;
 aspect-ratio: unset;
 overflow: auto;
 }
+.card_link.external > div.card_wrapper > h3,.card_link.external > div.card_wrapper > h6, .card-caption.external  {
+  text-decoration: none;
+  &:hover : {
+    text-decoration: none;
+  } 
+
+}
 .external {
 max-height: auto;
 aspect-ratio: unset;
@@ -1005,7 +1012,7 @@ a.button {
 }
 .top.header > div {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: space-between;
   margin: 0;
   padding: 0;
@@ -1072,13 +1079,11 @@ a.button {
   color: var(--dark) !important;
   display: block;
   font-family: var(--logo-font);
-  font-size: 1.7875512975rem;
   letter-spacing: 1px;
 }
 @media all and (min-width: 56.25em) {
   .logo {
     margin-left: 2rem;
-    font-size: 3.6355864383rem;
     padding: 0;
     text-align: center;
   }
@@ -1090,19 +1095,23 @@ a.button {
   outline: none;
 }
 .logo > img {
+  max-width: 80%;
   vertical-align: bottom;
-  max-height: var(--header-height);
+  max-height: calc(var(--header-height)*.8);
   width: auto;
+}
+.footer__social > a {
+  font-size: 2rem;
 }
 @media all and (min-width: 56.25em) {
   .logo > img {
-    height: var(--header-height);
+    height: calc(var(--header-height)*.8);
   }
 }
 
 @media all and (max-width: 56.1875em) {
   .search {
-    grid-area: search;
+    grid-area: search;  
   }
 }
 .search__btn {
@@ -1321,6 +1330,7 @@ a.button {
           justify-content: center;
   list-style: none;
   margin: 0;
+  margin-right: 3rem;
   padding: 0;
 }
 @media all and (max-width: 56.1875em) {
@@ -1854,6 +1864,16 @@ a.button {
   top: calc(var(--header-height) + 7vh);
   left: 50%;
   z-index: 4;
+}
+.hero > header > p {
+  position: relative;
+  margin-top: 1rem;
+  top: calc(var(--header-height) + 10vh);
+  left: 50%;
+  z-index: 4;
+}
+.hero > header > h1.inicio {
+  display: none;
 }
 @media all and (min-width: 56.25em) {
   .hero > header {
@@ -2864,12 +2884,12 @@ a.button {
 }
 .footer__social svg {
   fill: var(--primaryFooterTextColor);
-  height: 1rem;
+  height: 2rem;
   margin: 1.5rem 0.375rem 0;
   opacity: 0.6;
   -webkit-transition: all 0.12s linear 0s;
   transition: all 0.12s linear 0s;
-  width: 1rem;
+  width: 2rem;
 }
 .footer__social svg:hover {
   opacity: 1;
